devs/l502/l502api.h


X502_EXPORT(int32_t) L502_GetSerialList(char serials[][X502_SERIAL_SIZE], uint32_t size,
                                        uint32_t flags, uint32_t *devcnt);
X502_EXPORT(int32_t) L502_Open(t_x502_hnd hnd, const char *serial);